...
    NovaNavDestination(
      label: 'Home',
      icon: Icons.home_outlined,
      activeIcon: Icons.home_rounded,
    ),
    NovaNavDestination(
      label: 'Converse',
      icon: Icons.graphic_eq_outlined,
      activeIcon: Icons.graphic_eq_rounded,
    ),
    NovaNavDestination(
      label: 'Tasks',
      icon: Icons.check_circle_outline_rounded,
...
